# rna-aiuti-stato

./: .gitignore  README.md  dataset.yml  pyproject.toml
.github/workflows/: build-misure.yml  build.yml  test.yml
data/derived/: MANIFEST.json
data/derived/manifests/: misure_index.json  rna_2017.json  rna_2018.json  rna_2019.json  rna_2020.json  rna_2021.json  rna_2022.json  rna_2023.json  rna_2024.json  rna_2025.json  rna_2026.json  rna_index.json
notes/: domain-notes.md  query-examples.md
rna_aiuti/: __init__.py  parser.py
scripts/: download_and_process.py  extract.py  full_batch.py  generate_manifest.py
tests/: test_parser.py
